--- a/index.html
+++ b/index.html
@@ -7,31 +7,74 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script defer src="index.js"></script>
 
-
 </head>
 
-<head>
-    <title>Api Dolar Online</title>
-
-
-
-</head>
+<header>
+    <h2>Api Dolar Online</h2>
+</header>
 
 <body>
 
 
-    <div id="contenedorTarjetas">
+    <div id="cotizacionesContainer">
+
+        <div class="cardOficial card">
+            <p class="cardTitulo">Dolar Oficial</p>
+            <hr>
+            <div class="cardCotizaciones">
+                <div class="cardCompraVenta">
+                    <p class="cardSubtitulo">Compra</p>
+                    <p class="precio">$ 720 </p>
+                </div>
+                <div class="v-line"> </div>
+                <div class="cardCompraVenta">
+                    <p class="cardSubtitulo">Venta</p>
+                    <p class="precio">$ 750 </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="cardBlue card">
+            <p class="cardTitulo">Dolar Blue</p>
+            <hr>
+            <div class="cardCotizaciones">
+                <div class="cardCompraVenta">
+                    <p class="cardSubtitulo">Compra</p>
+                    <p class="precio">$ 720 </p>
+                </div>
+                <div class="v-line"> </div>
+                <div class="cardCompraVenta">
+                    <p class="cardSubtitulo">Venta</p>
+                    <p class="precio">$ 750 </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="cardTurista card">
+            <p class="cardTitulo">Dolar Turista</p>
+            <hr>
+            <div class="cardCotizaciones">
+                <div class="cardCompraVenta">
+                    <p class="cardSubtitulo">Compra</p>
+                    <p class="precio">$ 720 </p>
+                </div>
+                <div class="v-line"> </div>
+                <div class="cardCompraVenta">
+                    <p class="cardSubtitulo">Venta</p>
+                    <p class="precio">$ 750 </p>
+                </div>
+            </div>
+        </div>
+
+
+
+
 
     </div>
 
-    <div id="containerFavoritos">
-
-    </div>
 
 
 
-
-    <script src="index.js"></script>
 
 </body>
 
