--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <header>
     <h2>Api Dolar Online</h2>
+    <h5 class="fechaHora" id="fechaHora"> 15:20
+    </h5>
 </header>
 
 <body>
@@ -18,53 +20,6 @@
 
     <div id="cotizacionesContainer">
 
-        <div class="cardOficial card">
-            <p class="cardTitulo">Dolar Oficial</p>
-            <hr>
-            <div class="cardCotizaciones">
-                <div class="cardCompraVenta">
-                    <p class="cardSubtitulo">Compra</p>
-                    <p class="precio">$ 720 </p>
-                </div>
-                <div class="v-line"> </div>
-                <div class="cardCompraVenta">
-                    <p class="cardSubtitulo">Venta</p>
-                    <p class="precio">$ 750 </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="cardBlue card">
-            <p class="cardTitulo">Dolar Blue</p>
-            <hr>
-            <div class="cardCotizaciones">
-                <div class="cardCompraVenta">
-                    <p class="cardSubtitulo">Compra</p>
-                    <p class="precio">$ 720 </p>
-                </div>
-                <div class="v-line"> </div>
-                <div class="cardCompraVenta">
-                    <p class="cardSubtitulo">Venta</p>
-                    <p class="precio">$ 750 </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="cardTurista card">
-            <p class="cardTitulo">Dolar Turista</p>
-            <hr>
-            <div class="cardCotizaciones">
-                <div class="cardCompraVenta">
-                    <p class="cardSubtitulo">Compra</p>
-                    <p class="precio">$ 720 </p>
-                </div>
-                <div class="v-line"> </div>
-                <div class="cardCompraVenta">
-                    <p class="cardSubtitulo">Venta</p>
-                    <p class="precio">$ 750 </p>
-                </div>
-            </div>
-        </div>
 
 
 
