--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Api Dolar</title>
+    <title>Api Dolar Red</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script defer src="index.js"></script>
@@ -10,7 +10,7 @@
 </head>
 
 <header>
-    <h2>Api Dolar Online</h2>
+    <h2>Dolar Red</h2>
     <h5 class="fechaHora" id="fechaHora"> 15:20
     </h5>
 </header>
