--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <h3>What is Dolar Red?</h3>
 <p>"Dolar Red" is a calculated value meant to represent a Canadianized version of the Dolar Blue. It's a simple calculation as follows:</p>
-<p>Dolar Red = Dolar MEP / USD-CAD exchange rate</p>
+<p id="white">Dolar Red = Dolar MEP / USD-CAD exchange rate</p>
 <p>Note: Dolar MEP is used for the calculation since it is closest to the exchange rate used by credit card providers.</p>
 
     <div id="cotizacionesContainer">
