--- a/testmep.html
+++ b/testmep.html
@@ -12,7 +12,7 @@
 <header>
     <h2>Dolar MEP</h2>
     <div id="dolarMep"></div>
-    <h5 class="fechaHora" id="fechaHora"> 15:20 </h5>
+    <h5 class="fechaHora" id="fechaHora">  </h5>
 </header>
 
 <body>
