--- a/testmep.html
+++ b/testmep.html
@@ -12,6 +12,7 @@
 <header>
     <h2>Dolar MEP</h2>
     <div id="dolarMep"></div>
+    <div id="usd-cad"></div>
     <h5 class="fechaHora" id="fechaHora">  </h5>
 </header>
 
