--- a/testmep.html
+++ b/testmep.html
@@ -13,6 +13,7 @@
     <h2>Dolar MEP</h2>
     <div id="dolarMep"></div>
     <div id="usd-cad"></div>
+    <div id="dolarRed"></div>
     <h5 class="fechaHora" id="fechaHora">  </h5>
 </header>
 
