update MP script file

--- a/meppromise.html
+++ b/meppromise.html
@@ -5,7 +5,7 @@
     <title>Mep Promise</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <script defer src="testmep.js"></script>
+    <script defer src="meppromise.js"></script>
 
 </head>
 
