--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <header>
     <h2>Dolar Red</h2>
     <div id="dolarMep"></div>
-    <!-- <h2>650.00</h2> -->
-    <h5 class="fechaHora" id="fechaHora"> 15:20
-    </h5>
+    <h5 class="fechaHora" id="fechaHora"></h5>
 </header>
 
 <body>
