add box around red dolar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<header>
+<header id="redBox">
     <h2>Dolar Red</h2>
     <div id="dolarMep"></div>
     <h5 class="fechaHora" id="fechaHora"></h5>
