--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 </header>
 
 <body>
-<h3>What is Dolar Red?</h3>
-<p id="red">"Dolar Red" is a calculated value meant to represent a Canadianized version of the Dolar Blue. It's a simple calculation as follows:</p>
-<p id="white">Dolar Red = Dolar MEP / USD-CAD exchange rate</p>
-<p id="red">Note: Dolar MEP is used for the calculation since it is closest to the exchange rate used by credit card providers.</p>
+<section>
+    <h3>What is Dolar Red?</h3>
+    <p id="red">"Dolar Red" is a calculated value meant to represent a Canadianized version of the Dolar Blue. It's a simple calculation as follows:</p>
+    <p id="white">Dolar Red = Dolar MEP / USD-CAD exchange rate</p>
+    <p id="red">Note: Dolar MEP is used for the calculation since it is closest to the exchange rate used by credit card providers.</p>
+</section>
 
     <div id="cotizacionesContainer">
 
