--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <section>
     <h3>What is Dolar <span>Red?</span></h3>
     <p id="red">"Dolar Red" is a Canadianized version of the Dolar Blue. Instead of the unofficial (or "free") exchange rate between USD and ARS, it's an unofficial exchange rate between CAD and ARS. It's a simple calculation as follows:</p>
-    <p id="white">Dolar Red = Dolar MEP / USD-CAD exchange rate</p>
-    <p id="noteBien">Note: Dolar MEP is used for the calculation since it is closest to the exchange rate used by credit card providers.</p>
+    <p id="white">Dolar Red = Dolar MEP ÷ USD-CAD exchange rate</p>
+    <p id="noteBien">Note: Dolar MEP is used for the calculation because it is closest to the exchange rate used by credit card providers.</p>
 </section>
 
     <div id="cotizacionesContainer">
