--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <header id="redBox">
+    <span><a href="index_es.html">ES</a></span>
     <h2>Dolar Red</h2>
     <div id="dolarMep"></div>
     <h5 class="fechaHora" id="fechaHora"></h5>
