--- a/index_es.html
+++ b/index_es.html
@@ -17,11 +17,11 @@
 
 <body>
 <section>
-    <h3>What is Dolar <span>Red?</span></h3>
-    <p id="red">"Dolar Red" is a Canadianized version of the Dolar Blue. Instead of the unofficial (or "free") exchange rate between USD and ARS, it's an unofficial exchange rate between CAD and ARS. It's a simple calculation as follows:</p>
-    <p id="white">Dolar Red = Dolar MEP ÷ USD-CAD exchange rate</p>
-    <p id="noteBien">Note: Dolar MEP is used for the calculation because it is closest to the exchange rate used by credit card providers.</p>
-    <span><a href="index.html">EN</a></span>
+    <h3>¿Que es Dolar <span>Red?</span></h3>
+    <p id="red">"Dolar Red" es una versión canadianizada del Dolar Blue. En lugar del tipo de cambio no oficial (o "libre") entre USD y ARS, es un tipo de cambio no oficial entre CAD y ARS. Es un cálculo simple de la siguiente manera:</p>
+    <p id="white">Dolar Red = Dolar MEP ÷ USD-CAD tipo de cambio</p>
+    <p id="noteBien">Note: El dólar MEP se utiliza para el cálculo porque es el más cercano al tipo de cambio utilizado por los proveedores de tarjetas de crédito extranjeros.</p>
+    <a href="index.html">EN</a>
 </section>
 
     <div id="cotizacionesContainer">
