add github & contact

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <h2>Contact</h2>
 </header>
 
-<body id="contact">
+<body id="contactPage">
 <section>
     <form name="contact" method="POST" data-netlify="true">
         <p>
