--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav>
         <ul>
             <li><a href="https://github.com/t0md3v" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-            <li><a href="contact.html" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+            <li><a href="contact.html" target="_blank" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
         </ul>
     </nav>
 
