--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 <body id="contactPage">
 <section>
-    <form name="contact" method="POST" data-netlify="true">
+    <form name="contact" action="/success.html" method="POST" data-netlify="true">
         <p>
           <label>Your Name: <input type="text" name="name" /></label>
         </p>
@@ -28,7 +28,10 @@
         <p>
           <button type="submit">Send</button>
         </p>
+        
       </form>
+  
+
       
 </section>
 
