add github & contact

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script defer src="index.js"></script>
-
+    <script src="https://kit.fontawesome.com/f70e1f09af.js" crossorigin="anonymous"></script>
 </head>
 
 <header id="redBox">
@@ -35,8 +35,8 @@
 
     <nav>
         <ul>
-            <li><a href="https://github.com/t0md3v" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-            <li><a href="contact.html" target="_blank" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
+            <li><a href="https://github.com/t0md3v" target="_blank" class="icon brands fa-github"><i class="fa-brands fa-github fa-flip fa-lg" style="color: #ff3232;"></i></a></li>
+            <li><a href="contact.html" target="_blank" class="icon solid fa-envelope"><i class="fa-solid fa-envelope fa-flip" style="color: #ff3232;"></i></a></li>
         </ul>
     </nav>
 
