--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <nav>
         <ul>
-            <li><a href="https://github.com/t0md3v" target="_blank"><i class="fa-brands fa-github fa-flip fa-lg" style="color: #ff3232;"></i></a></li>
-            <li><a href="contact.html" target="_blank"><i class="fa-solid fa-envelope fa-flip" style="color: #ff3232;"></i></a></li>
+            <li><a href="https://github.com/t0md3v" target="_blank"><span><i class="fa-brands fa-github fa-flip fa-lg" style="color: #ff3232;"></i></span></a></li>
+            <li><a href="contact.html" target="_blank"><span><i class="fa-solid fa-envelope fa-flip fa-lg" style="color: #ff3232;"></i></span></a></li>
         </ul>
     </nav>
 
