add github & contact

--- a/success.html
+++ b/success.html
@@ -16,7 +16,7 @@
 <body id="contactPage">
 <section> 
   <p>Your form has been successfully submitted.</p>
-  <a href="index.html">Back</a>
+  <a href="index.html"><i class="fa-solid fa-chevron-left fa-2xl"></i>  Back</a>
 </section>
 
 </body>
