--- a/success.html
+++ b/success.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Success</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script defer src="index.js"></script>
