--- a/success.html
+++ b/success.html
@@ -3,8 +3,7 @@
 
 <head>
     <title>Success</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script defer src="index.js"></script>
     <script src="https://kit.fontawesome.com/f70e1f09af.js" crossorigin="anonymous"></script>
