--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p id="red">"Dolar Red" is a Canadianized version of the Dolar Blue. Instead of the unofficial (or "free") exchange rate between USD and ARS, it's an unofficial exchange rate between CAD and ARS. It's a simple calculation as follows:</p>
         <p id="white">Dolar Red = Dolar MEP ÷ USD-CAD exchange rate</p>
         <p id="noteBien">Note: Dolar MEP is used for the calculation because it is closest to the exchange rate used by credit card providers.</p>
-        <a href="index_es.html">ES</a>
+        <a href="index_es.html" id="spanishLink">ES</a>
     </section>
 
     <div id="cotizacionesContainer">
