--- a/index_es.html
+++ b/index_es.html
@@ -21,7 +21,7 @@
     <p id="red">"Dolar Red" es una versión canadianizada del Dolar Blue. En lugar del tipo de cambio no oficial (o "libre") entre USD y ARS, es un tipo de cambio no oficial entre CAD y ARS. Es un cálculo simple de la siguiente manera:</p>
     <p id="white">Dolar Red = Dolar MEP ÷ USD-CAD tipo de cambio</p>
     <p id="noteBien">Note: El dólar MEP se utiliza para el cálculo porque es el más cercano al tipo de cambio utilizado por los proveedores de tarjetas de crédito extranjeros.</p>
-    <p #spanishLink><a href="index.html">EN</a></p>
+    <p id="spanishLink"><a href="index.html">EN</a></p>
 </section>
 
     <div id="cotizacionesContainer">
