update index_ES with github & contact

--- a/index_es.html
+++ b/index_es.html
@@ -33,7 +33,12 @@
 
     </div>
 
-
+    <nav>
+        <ul>
+            <li><a href="https://github.com/t0md3v" target="_blank"><span><i class="fa-brands fa-github fa-flip fa-2xl" style="color: #ff3232;"></i></span></a></li>
+            <li><a href="contact.html" target="_blank"><span><i class="fa-solid fa-envelope fa-flip fa-2xl" style="color: #ff3232;"></i></span></a></li>
+        </ul>
+    </nav>
 
 
 
