update index_ES with github & contact

--- a/index_es.html
+++ b/index_es.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script defer src="index.js"></script>
-
+    <script src="https://kit.fontawesome.com/f70e1f09af.js" crossorigin="anonymous"></script>
 </head>
 
 <header id="redBox">
