--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    
+    <!--
+        Take offline Mar 18, 2024
     <header id="redBox">
         <h2>Dolar Red</h2>
         <div id="dolarMep"></div>
@@ -43,7 +44,7 @@
     </nav>
 
 
-
+-->
 </body>
 
 </html>
