--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h1>Maintenance</h1>
     <!--
         Take offline Mar 18, 2024
+        back online
+    -->
     <header id="redBox">
         <h2>Dolar Red</h2>
         <div id="dolarMep"></div>
@@ -45,7 +47,7 @@
     </nav>
 
 
--->
+
 </body>
 
 </html>
